--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
     link(rel='me', href='https://twitter.com/munkkeli', type='text/html')
     link(rel='author', href='humans.txt')
 
-    +facebook('https://munkkeli.io/', 'Tuomas Pöyry – munkkeli.io', 'munkkeli.io', 'I am a web designer / developer from Finland. Here are some links to my social media.', '@munkkeli', 'https://munkkeli.io/images/og-image.png')
+    +facebook('https://munkkeli.io/', 'Tuomas Pöyry – munkkeli.io', 'I am a web designer / developer from Finland. Here are some links to my social media.', 'https://munkkeli.io/images/og-image.png')
 
     +twitter('https://munkkeli.io/', 'Tuomas Pöyry – munkkeli.io', 'I am a web designer / developer from Finland. Here are some links to my social media.', '@munkkeli', 'https://munkkeli.io/images/og-image.png')
 
@@ -33,9 +33,6 @@ html
     link(rel='stylesheet', type='text/css', href='/css/style.min.css')
     block styles
 
-  body
-    block content
-
     script(type='text/javascript').
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,5 +40,8 @@ html
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-80201772-1', 'auto');
       ga('send', 'pageview');
+
+  body
+    block content
 
     block scripts
