--- a/views/meta.jade
+++ b/views/meta.jade
@@ -1,11 +1,10 @@
-mixin facebook(url, name, title, description, author, image)
+mixin facebook(url, title, description, image)
   meta(property='og:url', content=url)
   meta(property='og:type', content='website')
   meta(property='og:title', content=title)
   meta(property='og:image', content=image)
   meta(property='og:description', content=description)
-  meta(property='og:site_name', content=name)
-  meta(property='article:author', content=author)
+  meta(property='og:site_name', content=title)
 
 mixin twitter(url, title, description, author, image)
   meta(name='twitter:card', content='summary_large_image')
@@ -16,8 +15,8 @@ mixin twitter(url, title, description, author, image)
   meta(name='twitter:description', content=description)
   meta(name='twitter:image', content=image)
 
-mixin google(name, description, author, image)
+mixin google(title, description, author, image)
   link(href=author, rel='publisher')
-  meta(itemprop='name', content=name)
+  meta(itemprop='name', content=title)
   meta(itemprop='description', content=description)
   meta(itemprop='image', content=image)
